# nixos-docs-sentiment

./: .gitignore  README.md  flake.nix  pyproject.toml
data/compare/: 20260703T153834Z.json
data/labeled_llm/: 20260703T153834Z.audit.jsonl  20260703T153834Z.jsonl
data/metrics/: 20260703T152908Z.json  20260703T153123Z.json  20260703T153834Z.json
docs/: LLM_METHOD.md
nixdoc_sentiment/: __init__.py  __main__.py  aggregate.py  categories.py  classify.py  cli.py  collect.py  http.py  report.py  schema.py  sources.py  store.py  textutil.py
scripts/: audit_llm.py  make_charts.py
tests/: test_classify.py
